Add option to filter points representing silence

--- a/HoloFFT.ini
+++ b/HoloFFT.ini
@@ -10,7 +10,7 @@ MouseLeaveAction=!CommandMeasure mScript HideControls()
 [Metadata]
 Name=HoloFFT
 Author=killall-q.deviantart.com
-Version=2016.04.01
+Version=2017.09.20
 Information=Displays audio FFT as 3D point cloud visualizations.
 License=Creative Commons Attribution-NonCommercial-ShareAlike 3.0
 
@@ -435,6 +435,23 @@ Y=r
 Text=#Sens#
 SolidColor=00000000
 
+[FilterLabel]
+Meter=String
+MeterStyle=sSet
+Text=FILTER SILENCE
+
+[Filter1]
+Meter=String
+MeterStyle=sSet | sSetVar
+Text=ON
+LeftMouseUpAction=!CommandMeasure mScript SetFilter(1)
+
+[Filter0]
+Meter=String
+MeterStyle=sSet | sSetVar
+Text=OFF
+LeftMouseUpAction=!CommandMeasure mScript SetFilter()
+
 [ChannelLabel]
 Meter=String
 MeterStyle=sSet
@@ -464,7 +481,7 @@ Hidden=1
 [BandsLabel]
 Meter=String
 MeterStyle=sSet
-Y=271
+Y=296
 Text=BANDS
 
 [BandsSet]
@@ -772,7 +789,7 @@ Group=PresetList
 [ChannelBG]
 Meter=Image
 X=83
-Y=246
+Y=271
 W=80
 H=190
 Hidden=1
