Convert rotation buttons to slider

--- a/HoloFFT.ini
+++ b/HoloFFT.ini
@@ -10,7 +10,7 @@ MouseLeaveAction=!CommandMeasure mScript HideControls()
 [Metadata]
 Name=HoloFFT
 Author=killall-q.deviantart.com
-Version=2017.09.20
+Version=2017.09.21
 Information=Displays audio FFT as 3D point cloud visualizations.
 License=Creative Commons Attribution-NonCommercial-ShareAlike 3.0
 
@@ -648,41 +648,30 @@ Meter=String
 MeterStyle=sSet
 Text=ROTATION
 
-[Omega0.02]
-Meter=String
+[OmegaSet]
+Meter=Image
 MeterStyle=sSet | sSetVar
-Y=2r
-FontFace=Webdings
-Text=7
-LeftMouseUpAction=!CommandMeasure mScript SetOmega(0.02)
+H=19
+W=100
+LeftMouseUpAction=!CommandMeasure mScript SetOmega(0,$MouseX:%$)
+MouseScrollUpAction=!CommandMeasure mScript SetOmega(0.004)
+MouseScrollDownAction=!CommandMeasure mScript SetOmega(-0.004)
 
-[Omega0.01]
-Meter=String
-MeterStyle=sSet | sSetVar
-FontFace=Webdings
-Text=3
-LeftMouseUpAction=!CommandMeasure mScript SetOmega(0.01)
+[OmegaSlider]
+Meter=Image
+Y=r
+W=10
+H=19
+SolidColor=FFFFFF
+Hidden=1
+Group=Set
 
-[Omega0]
+[OmegaVal]
 Meter=String
-MeterStyle=sSet | sSetVar
-FontFace=Webdings
-Text=;
-LeftMouseUpAction=!CommandMeasure mScript SetOmega(0)
-
-[Omega-0.01]
-Meter=String
-MeterStyle=sSet | sSetVar
-FontFace=Webdings
-Text=4
-LeftMouseUpAction=!CommandMeasure mScript SetOmega(-0.01)
-
-[Omega-0.02]
-Meter=String
-MeterStyle=sSet | sSetVar
-FontFace=Webdings
-Text=8
-LeftMouseUpAction=!CommandMeasure mScript SetOmega(-0.02)
+MeterStyle=sSet
+X=R
+Y=r
+SolidColor=00000000
 
 [PresetBG]
 Meter=Image
