Add many presets

--- a/HoloFFT.ini
+++ b/HoloFFT.ini
@@ -10,7 +10,7 @@ MouseLeaveAction=!CommandMeasure mScript HideControls()
 [Metadata]
 Name=HoloFFT
 Author=killall-q.deviantart.com
-Version=2021.11.07
+Version=2022.02.02
 Information=Displays audio FFT as 3D point cloud visualizations.
 License=Creative Commons Attribution-NonCommercial-ShareAlike 3.0
 
@@ -19,23 +19,18 @@ License=Creative Commons Attribution-NonCommercial-ShareAlike 3.0
 
 ; ---------------MEASURES---------------
 
-[mFFT0]
+[mFFTPeak]
 Measure=Plugin
 Plugin=AudioLevel
+PeakAttack=#Attack#
+PeakDecay=#Decay#
 FFTSize=1024
 FFTAttack=#Attack#
 FFTDecay=#Decay#
 Sensitivity=#Sens#
 Bands=#Bands#
-Type=Band
-BandIdx=0
+Type=Peak
 Group=mFFT
-
-[mFFTDevices]
-Measure=Plugin
-Plugin=AudioLevel
-Parent=mFFT0
-Type=DeviceList
 
 @Include=#@#Measures.inc
 
