--- a/HoloFFT.ini
+++ b/HoloFFT.ini
@@ -10,7 +10,7 @@ MouseLeaveAction=!CommandMeasure mScript HideControls()
 [Metadata]
 Name=HoloFFT
 Author=killall-q.deviantart.com
-Version=2022.02.02
+Version=2022.10.20
 Information=Displays audio FFT as 3D point cloud visualizations.
 License=Creative Commons Attribution-NonCommercial-ShareAlike 3.0
 
@@ -127,12 +127,12 @@ FontFace=Segoe UI
 FontSize=10
 FontColor=FFFFFF
 SolidColor=C00000
-OnDismissAction=!CommandMeasure mScript lock=false
-Command1=[!SetVariable ResSet "$UserInput$" DefaultValue="#Bands#" X="66" Y="[BandsSet:Y]" W="([BandsSet:W]+40)"][!CommandMeasure mScript SetRes('Bands')]
-Command2=[!SetVariable ResSet "$UserInput$" DefaultValue="#Rows#" X="60" Y="[RowsSet:Y]" W="([RowsSet:W]+40)"][!CommandMeasure mScript SetRes('Rows')]
-Command3=[!SetVariable PixSSet "$UserInput$" DefaultValue="#PixS#" X="84" Y="[PixSSet:Y]" W="([PixSSet:W]+40)"][!CommandMeasure mScript SetPixS()]
-Command4=[!SetVariable ColorSet "$UserInput$" DefaultValue="#Color1#" X="65" Y="[Color1Set:Y]" W="([Color1Set:W]+40)"][!CommandMeasure mScript SetColor(1)]
-Command5=[!SetVariable ColorSet "$UserInput$" DefaultValue="#Color2#" X="[Color2Set:X]" Y="[Color2Set:Y]" W="([Color2Set:W]+40)"][!CommandMeasure mScript SetColor(2)]
+OnDismissAction=!CommandMeasure mScript isLocked=false
+Command1=[!SetVariable Set "$UserInput$" DefaultValue="#Bands#" X="[BandsSet:X]" Y="[BandsSet:Y]" W="([BandsSet:W]+40)" InputNumber="1"][!CommandMeasure mScript SetRes('Bands')]
+Command2=[!SetVariable Set "$UserInput$" DefaultValue="#Rows#" X="[RowsSet:X]" Y="[RowsSet:Y]" W="([RowsSet:W]+40)" InputNumber="1"][!CommandMeasure mScript SetRes('Rows')]
+Command3=[!SetVariable Set "$UserInput$" DefaultValue="#PixS#" X="[PixSSet:X]" Y="[PixSSet:Y]" W="([PixSSet:W]+40)" InputNumber="1"][!CommandMeasure mScript SetPixS()]
+Command4=[!SetVariable Set "$UserInput$" DefaultValue="#Color1#" X="[Color1Set:X]" Y="[Color1Set:Y]" W="([Color1Set:W]+40)"][!CommandMeasure mScript SetColor(1)]
+Command5=[!SetVariable Set "$UserInput$" DefaultValue="#Color2#" X="[Color2Set:X]" Y="[Color2Set:Y]" W="([Color2Set:W]+40)"][!CommandMeasure mScript SetColor(2)]
 
 ; ----------------STYLES----------------
 
@@ -320,7 +320,7 @@ MeterStyle=sSet | sSetVar
 Text=#Preset#
 MouseOverAction=[!ShowMeter PresetArrow][!SetOption PresetSet SolidColor D80000E0]
 MouseLeaveAction=[!HideMeter PresetArrow][!SetOption PresetSet SolidColor 505050E0]
-LeftMouseUpAction=[!ShowMeterGroup PresetList][!HideMeter PresetSet]
+LeftMouseUpAction=[!MoveMeter 66 146 PresetBG][!ShowMeterGroup PresetList][!HideMeter PresetSet]
 MiddleMouseUpAction=!CommandMeasure mScript LoadPreset()
 
 [PresetArrow]
@@ -339,7 +339,7 @@ Hidden=1
 [AttackLabel]
 Meter=String
 MeterStyle=sSet
-Y=171
+Y=16r
 Text=ATTACK
 
 [AttackSet]
@@ -458,7 +458,7 @@ MeterStyle=sSet | sSetVar
 Text=#Channel#
 MouseOverAction=[!ShowMeter ChannelArrow][!SetOption ChannelSet SolidColor D80000E0]
 MouseLeaveAction=[!HideMeter ChannelArrow][!SetOption ChannelSet SolidColor 505050E0]
-LeftMouseUpAction=[!ShowMeterGroup ChannelList][!HideMeter ChannelSet]
+LeftMouseUpAction=[!MoveMeter 83 271 ChannelBG][!ShowMeterGroup ChannelList][!HideMeter ChannelSet]
 
 [ChannelArrow]
 Meter=String
@@ -476,7 +476,7 @@ Hidden=1
 [BandsLabel]
 Meter=String
 MeterStyle=sSet
-Y=296
+Y=16r
 Text=BANDS
 
 [BandsSet]
@@ -484,7 +484,7 @@ Meter=String
 MeterStyle=sSet | sSetVar
 Text=#Bands#
 MouseActionCursorName=Text
-LeftMouseUpAction=[!CommandMeasure mInput "ExecuteBatch 1"][!CommandMeasure mScript lock=true]
+LeftMouseUpAction=[!CommandMeasure mInput "ExecuteBatch 1"][!CommandMeasure mScript isLocked=true]
 
 [RowsLabel]
 Meter=String
@@ -496,7 +496,7 @@ Meter=String
 MeterStyle=sSet | sSetVar
 Text=#Rows#
 MouseActionCursorName=Text
-LeftMouseUpAction=[!CommandMeasure mInput "ExecuteBatch 2"][!CommandMeasure mScript lock=true]
+LeftMouseUpAction=[!CommandMeasure mInput "ExecuteBatch 2"][!CommandMeasure mScript isLocked=true]
 
 [PixSLabel]
 Meter=String
@@ -506,9 +506,9 @@ Text=PIXEL SIZE
 [PixSSet]
 Meter=String
 MeterStyle=sSet | sSetVar
-Text=#PixS#
+Text=#PixS# px
 MouseActionCursorName=Text
-LeftMouseUpAction=[!CommandMeasure mInput "ExecuteBatch 3"][!CommandMeasure mScript lock=true]
+LeftMouseUpAction=[!CommandMeasure mInput "ExecuteBatch 3"][!CommandMeasure mScript isLocked=true]
 
 [ShiftLabel]
 Meter=String
@@ -574,7 +574,7 @@ Meter=String
 MeterStyle=sSet | sSetVar
 Text=#Color1#
 MouseActionCursorName=Text
-LeftMouseUpAction=[!CommandMeasure mInput "ExecuteBatch 4"][!CommandMeasure mScript lock=true]
+LeftMouseUpAction=[!CommandMeasure mInput "ExecuteBatch 4"][!CommandMeasure mScript isLocked=true]
 
 [ColorSwap]
 Meter=String
@@ -594,7 +594,7 @@ Meter=String
 MeterStyle=sSet | sSetVar
 Text=#Color2#
 MouseActionCursorName=Text
-LeftMouseUpAction=[!CommandMeasure mInput "ExecuteBatch 5"][!CommandMeasure mScript lock=true]
+LeftMouseUpAction=[!CommandMeasure mInput "ExecuteBatch 5"][!CommandMeasure mScript isLocked=true]
 
 [StyleLabel]
 Meter=String
@@ -671,12 +671,12 @@ SolidColor=00000000
 [PresetBG]
 Meter=Image
 X=66
-Y=146
+Y=-200
 W=172
 H=190
 Hidden=1
 Group=PresetList
-MouseLeaveAction=[!HideMeterGroup PresetList][!ShowMeter PresetSet]
+MouseLeaveAction=[!MoveMeter 66 -200 PresetBG][!HideMeterGroup PresetList][!ShowMeter PresetSet]
 MouseScrollUpAction=!CommandMeasure mScript ScrollList(-1)
 MouseScrollDownAction=!CommandMeasure mScript ScrollList(1)
 
@@ -755,7 +755,7 @@ RightMouseUpAction=!CommandMeasure mPreset10 ContextMenu
 Meter=Image
 MeterStyle=sPreset
 X=R
-Y=146
+Y=-190R
 W=12
 H=190
 Hidden=1
@@ -773,12 +773,12 @@ Group=PresetList
 [ChannelBG]
 Meter=Image
 X=83
-Y=271
+Y=-200
 W=80
 H=190
 Hidden=1
 Group=ChannelList
-MouseLeaveAction=[!HideMeterGroup ChannelList][!ShowMeter ChannelSet]
+MouseLeaveAction=[!MoveMeter 83 -200 ChannelBG][!HideMeterGroup ChannelList][!ShowMeter ChannelSet]
 
 [ChannelSum]
 Meter=String
