Change default preset

--- a/HoloFFT.ini
+++ b/HoloFFT.ini
@@ -10,7 +10,7 @@ MouseLeaveAction=!CommandMeasure mScript HideControls()
 [Metadata]
 Name=HoloFFT
 Author=killall-q.deviantart.com
-Version=2022.10.20
+Version=2022.12.01
 Information=Displays audio FFT as 3D point cloud visualizations.
 License=Creative Commons Attribution-NonCommercial-ShareAlike 3.0
 
@@ -155,6 +155,12 @@ Group=Control
 MouseOverAction=!SetOption #CURRENTSECTION# FontColor FF0000
 MouseLeaveAction=!SetOption #CURRENTSECTION# FontColor FFFFFF
 
+[sControlImage]
+Hidden=1
+Group=Control
+MouseOverAction=!SetOption #CURRENTSECTION# ImageTint FF0000
+MouseLeaveAction=!SetOption #CURRENTSECTION# ImageTint ""
+
 [sSet]
 X=12
 Y=6R
@@ -218,8 +224,8 @@ MeterStyle=sControl
 X=30
 Y=30
 Text=5
-LeftMouseUpAction=!CommandMeasure mScript Pitch(-0.2)
-MiddleMouseUpAction=[!CommandMeasure mScript theta=0][!WriteKeyValue Variables Theta 0 "#@#Settings.inc"]
+LeftMouseUpAction=!CommandMeasure mScript Pitch(-0.1)
+MiddleMouseUpAction=!CommandMeasure mScript Pitch(0,true)
 MouseScrollUpAction=!CommandMeasure mScript Pitch(-0.1)
 MouseScrollDownAction=!CommandMeasure mScript Pitch(0.1)
 
@@ -229,8 +235,8 @@ MeterStyle=sControl
 X=r
 Y=R
 Text=6
-LeftMouseUpAction=!CommandMeasure mScript Pitch(0.2)
-MiddleMouseUpAction=[!CommandMeasure mScript theta=0][!WriteKeyValue Variables Theta 0 "#@#Settings.inc"]
+LeftMouseUpAction=!CommandMeasure mScript Pitch(0.1)
+MiddleMouseUpAction=!CommandMeasure mScript Pitch(0,true)
 MouseScrollUpAction=!CommandMeasure mScript Pitch(-0.1)
 MouseScrollDownAction=!CommandMeasure mScript Pitch(0.1)
 
@@ -246,32 +252,26 @@ LineColor=00000050
 AntiAlias=1
 Hidden=1
 Group=Control
-MiddleMouseUpAction=[!CommandMeasure mScript phi=0][!WriteKeyValue Variables Phi 0 "#@#Settings.inc"]
+MiddleMouseUpAction=!CommandMeasure mScript Roll(0,true)
 MouseScrollUpAction=!CommandMeasure mScript Roll(0.1)
 MouseScrollDownAction=!CommandMeasure mScript Roll(-0.1)
 
 [RollRight]
 Meter=Image
+MeterStyle=sControlImage
 X=r
 Y=r
 ImageName=#@#Images\Roll.png
-Hidden=1
-Group=Control
-MouseOverAction=!SetOption RollRight ImageTint FF0000
-MouseLeaveAction=!SetOption RollRight ImageTint ""
-LeftMouseUpAction=!CommandMeasure mScript Roll(0.2)
+LeftMouseUpAction=!CommandMeasure mScript Roll(0.1)
 
 [RollLeft]
 Meter=Image
+MeterStyle=sControlImage
 X=R
 Y=r
 ImageName=#@#Images\Roll.png
 ImageFlip=Horizontal
-Hidden=1
-Group=Control
-MouseOverAction=!SetOption RollLeft ImageTint FF0000
-MouseLeaveAction=!SetOption RollLeft ImageTint ""
-LeftMouseUpAction=!CommandMeasure mScript Roll(-0.2)
+LeftMouseUpAction=!CommandMeasure mScript Roll(-0.1)
 
 [YawLeft]
 Meter=String
@@ -279,8 +279,8 @@ MeterStyle=sControl
 X=76
 Y=112
 Text=3
-LeftMouseUpAction=!CommandMeasure mScript Yaw(0.2)
-MiddleMouseUpAction=[!CommandMeasure mScript psi=0][!WriteKeyValue Variables Psi 0 "#@#Settings.inc"]
+LeftMouseUpAction=!CommandMeasure mScript Yaw(0.1)
+MiddleMouseUpAction=!CommandMeasure mScript Yaw(0,true)
 MouseScrollUpAction=!CommandMeasure mScript Yaw(0.1)
 MouseScrollDownAction=!CommandMeasure mScript Yaw(-0.1)
 
@@ -290,20 +290,17 @@ MeterStyle=sControl
 X=R
 Y=r
 Text=4
-LeftMouseUpAction=!CommandMeasure mScript Yaw(-0.2)
-MiddleMouseUpAction=[!CommandMeasure mScript psi=0][!WriteKeyValue Variables Psi 0 "#@#Settings.inc"]
+LeftMouseUpAction=!CommandMeasure mScript Yaw(-0.1)
+MiddleMouseUpAction=!CommandMeasure mScript Yaw(0,true)
 MouseScrollUpAction=!CommandMeasure mScript Yaw(0.1)
 MouseScrollDownAction=!CommandMeasure mScript Yaw(-0.1)
 
 [Cog]
 Meter=Image
+MeterStyle=sControlImage
 X=12
 Y=94
 ImageName=#@#Images\Cog.png
-Hidden=1
-Group=Control
-MouseOverAction=!SetOption Cog ImageTint FF0000
-MouseLeaveAction=!SetOption Cog ImageTint ""
 LeftMouseUpAction=!ToggleMeterGroup Set
 
 ; ----------------SETTINGS--------------
